static/css/context-menu.css
#context-menu {
  text-align: center;
}

#context-menu-heading {
  line-height: 9.6rem;
}

#context-menu-heading-icon {
  height: 4rem;
  position: relative;
  top: 1.3rem;
  padding-right: 0.5rem;
}

#context-menu-heading-text {
  font-size: 1.6rem;
}

#context-menu-content {
  text-align: center;
  position: relative;
  top: calc(50% - 3.8rem);
  transform: translateY(-50%);
}

#context-menu-content .hidden {
  display: none;
}

.context-menu-button {
  border: none;
  border-radius: 0.5rem;
  color: white;
  font-size: 1.6rem;
  width: 60%;
  min-width: 15rem;
  height: 6rem;
}

.context-menu-button.danger {
  background-color: #ff5555;
}

#context-menu-content-edit {
  background-color: #597285;
  width: 50%;
  min-width: 28rem;
  max-width: 65rem;
  margin: 1rem auto;
  padding: 1rem;
  display: flex;
  flex-direction: row;
  border-radius: 0.5rem;
}

#edit-thing-icon {
  width: 6.4rem;
  height: 6.4rem;
  background-size: 6.4rem;
}

#edit-thing-metadata {
  flex: 1;
  padding: 1rem 1rem 0 1rem;
  text-align: left;
}

#edit-thing-name {
  display: block;
  width: calc(100% - 1rem);
}

#edit-thing-type {
  display: inline-block;
  text-align: left;
  color: #fff;
  background-color: #7f93a1;
  margin: 1rem 0;
  font-size: 1.5rem;
  width: 50%;
  border: none;
  border-radius: 0.5rem;
  height: 4rem;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background-image: url('/optimized-images/select-arrow.svg');
  background-repeat: no-repeat;
  background-size: 1.25rem;
  background-position: calc(100% - 1rem);
  padding-left: 1rem;
}

#edit-thing-custom-icon-label {
  appearance: button;
  -moz-appearance: button;
  -webkit-appearance: button;
  font-size: 1.5rem;
}

.edit-thing-button {
  height: 4rem;
  background-color: #7f93a1;
  margin: 1.25rem 0;
}

.edit-thing-button:disabled,
.edit-thing-button:disabled:hover,
.edit-thing-button:hover:active {
  background-color: #597285;
}

#edit-thing-label {
  display: block;
  text-align: left;
  color: #ccc;
  margin: 1rem 0;
  font-size: 1.5rem;
}

#edit-thing-label.error {
  color: orange;
}

